--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1",
+    "cors": "^2.8.5",
+    "dotenv":"^16.0.1",
+    "mongoose":"^6.4.6",
+    "body-parser": "^1.20.0"
+  },
   "devDependencies": {
     "nodemon": "^2.0.19"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongoose": "^6.4.6"
   }
 }
